--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/index.js",
   "scripts": {
     "start": "nodemon server/index.js",
-    "test": "jest"
+    "test-jest": "jest",
+    "test": "mocha"
   },
   "author": "Theresa Tran",
   "license": "ISC",
@@ -18,7 +19,9 @@
     "pg": "^8.7.3"
   },
   "devDependencies": {
+    "chakram": "^1.5.0",
     "jest": "^27.5.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.4"
   }
 }
